deuce ran out of perm on java 1.7.0_21 x64